# informatics

./: .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  compare__diff_non_null_in_internal.json  compare__matches.json  compare__null_in_internal_all.json  compare__null_in_internal_and_present_in_ege.json  compare__only_in_ege.json  compare__only_in_internal.json  compare_internal_id_to_task_number__vs__ege_html.json  download_assets.py  download_fipi_pages.py  generate_task_mdx.py  internal_id_to_task_number.json  internal_id_to_task_number__ege_html.json  map.json  parse_fipi_pages.py  pipeline.py  pipeline.yml  pyproject.toml  similar_tasks__task_number_null__template_level.json  tasks_clusters.json  tasks_internal_id_question_text.jsonl  tasks_internal_id_question_text__task_number_null.jsonl  template_task_groups.json  transform_tasks.py
frontend/: .eslintrc.cjs  AGENTS.md  ege.home+1-key.pem  ege.home+1.pem  ege.local+1-key.pem  ege.local+1.pem  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/public/: answers.json  internal_id_to_task_number.json  map.json  (+2 more)
pages/: page_0.html  page_1.html  page_10.html  page_11.html  page_12.html  page_13.html  page_14.html  page_15.html  page_16.html  page_17.html  page_18.html  page_19.html  page_2.html  page_20.html  page_21.html  page_22.html  page_23.html  page_3.html  page_4.html  page_5.html  page_6.html  page_7.html  page_8.html  page_9.html
reference/: kes.json
scripts/: deploy_frontend_yc.sh  prune_task_images.py  verify_mdx.py
(+2335 files in other folders)
